--- a/Diagnosis.Client.App/Windows/Shell/MainWindow.xaml
+++ b/Diagnosis.Client.App/Windows/Shell/MainWindow.xaml
@@ -18,7 +18,7 @@
                      d:DesignWidth="500"
                      MinWidth="200"
                      MinHeight="200"
-                     Title="{Binding CurrentView.Title}"
+                     Title="{Binding Title}"
                      TitleCaps="False"
                      GlowBrush="{DynamicResource AccentColorBrush}"
                      NonActiveGlowBrush="Gray"
