--- a/Diagnosis.Server.App/Windows/MainWindow.xaml
+++ b/Diagnosis.Server.App/Windows/MainWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="Diagnosis.Server.App.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Diagnosis on server"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:screens="clr-namespace:Diagnosis.Server.App.Screens"
@@ -9,6 +8,7 @@
         mc:Ignorable="d"
         d:DesignHeight="200"
         d:DesignWidth="500"
+        Title="{Binding Title}"
         Height="{Binding Path=Default.MainWindowHeight,
                          Mode=TwoWay,
                          Source={StaticResource Settings}}"
