--- a/Diagnosis.Client.App/App.xaml
+++ b/Diagnosis.Client.App/App.xaml
@@ -42,8 +42,9 @@
             
             <s:Boolean x:Key="True">True</s:Boolean>
             <s:Boolean x:Key="False">False</s:Boolean>
-          
+
             <properties:Settings x:Key="Settings" />
+            <properties:Resources x:Key="Resources" />
 
             <!-- Tag is HolderVm -->
             <ContextMenu x:Key="HolderContextMenu" 
