--- a/Diagnosis.Client.App/Resources/ImageResources.xaml
+++ b/Diagnosis.Client.App/Resources/ImageResources.xaml
@@ -3,13 +3,19 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/Diagnosis.Common.Presentation;component/Resources/ImageResources.xaml" />
     </ResourceDictionary.MergedDictionaries>
-    
-    <BitmapImage x:Key="closeImage" UriSource="/Resources/Images/Close_16xLG.png" />
-    <BitmapImage x:Key="addImage" UriSource="/Resources/Images/AddControl_371.png" />
-    <BitmapImage x:Key="saveImage" UriSource="/Resources/Images/save_16xLG.png" />
-    <BitmapImage x:Key="undoImage" UriSource="/Resources/Images/Arrow_UndoRevertRestore_16xLG.png" />
-    <BitmapImage x:Key="deleteImage" UriSource="/Resources/Images/DeleteHS.png" />
-    <BitmapImage x:Key="editImage" UriSource="/Resources/Images/126_Edit_24x24_72.png" />
+
+    <BitmapImage x:Key="closeImage"
+                 UriSource="/Resources/Images/Close_16xLG.png" />
+    <BitmapImage x:Key="addImage"
+                 UriSource="/Resources/Images/AddControl_371.png" />
+    <BitmapImage x:Key="saveImage"
+                 UriSource="/Resources/Images/save_16xLG.png" />
+    <BitmapImage x:Key="undoImage"
+                 UriSource="/Resources/Images/Arrow_UndoRevertRestore_16xLG.png" />
+    <BitmapImage x:Key="deleteImage"
+                 UriSource="/Resources/Images/DeleteHS.png" />
+    <BitmapImage x:Key="editImage"
+                 UriSource="/Resources/Images/126_Edit_24x24_72.png" />
     <BitmapImage x:Key="findImage"
                  UriSource="/Resources/Images/Find_5650.png" />
     <BitmapImage x:Key="sortAscImage"
@@ -17,4 +23,12 @@
     <BitmapImage x:Key="groupByImage"
                  UriSource="/Resources/Images/GroupBy.png" />
 
+    <BitmapImage x:Key="cutImage"
+                 UriSource="/Resources/Images/Cut_6523.png" />
+
+    <BitmapImage x:Key="copyImage"
+                 UriSource="/Resources/Images/Copy_6524.png" />
+
+    <BitmapImage x:Key="pasteImage"
+                 UriSource="/Resources/Images/Paste_6520.png" />
 </ResourceDictionary>
