--- a/Diagnosis.Client.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.Client.App/Controls/Search/Tag.xaml
@@ -216,9 +216,9 @@
                     <MenuItem Header="Добавить справа"
                               Command="{Binding AddRightCommand}" />
                     <Separator />
-                    <MenuItem Command="{x:Static ApplicationCommands.Cut}" />
-                    <MenuItem Command="{x:Static ApplicationCommands.Copy}" />
-                    <MenuItem Command="{x:Static ApplicationCommands.Paste}" />
+                    <MenuItem Style="{StaticResource cutMenuItem}" />
+                    <MenuItem Style="{StaticResource copyMenuItem}" />
+                    <MenuItem Style="{StaticResource pasteMenuItem}" />
                 </ContextMenu>
             </TextBox.ContextMenu>
         </TextBox>
